# aegis-core

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  check_vps.exp  deploy_to_vps.exp  deploy_to_vps.sh  install_ssl.exp  run_on_vps.exp  test_length.sh  test_nginx.sh  test_sed.rs  УСТАНОВКА-НА-СЕРВЕР.sh
backend/: Cargo.toml  aegis_auth.db  aegis_knowledge.db-shm  aegis_knowledge.db-wal  aegis_persistent.db  build.rs  config.yaml
backend/certs/: ca.crt  ca.key  ca.srl  node1.crt  node1.csr  node1.key  node2.crt  node2.csr  node2.key
backend/data/: aegis.db  aegis_dna.json
backend/qdrant_storage/: raft_state.json
backend/qdrant_storage/collections/black_threats/0/: newest_clocks.json
backend/qdrant_storage/collections/black_threats/0/segments/03acdeee-4ec7-43e1-8b4a-e4542d3b3452/: mutable_id_tracker.mappings  mutable_id_tracker.versions
backend/qdrant_storage/collections/black_threats/0/segments/080d03f6-b776-4cb0-a582-27bfa4e38d13/: mutable_id_tracker.mappings  (+1 more)
backend/qdrant_storage/collections/white_behavior/0/: newest_clocks.json  replica_state.json
backend/src/agent/: agent_bus.rs  agent_registry.rs  api_key_store.rs  ast_verifier.rs  audit.rs  auth.rs  autonomous_remediation.rs  config.rs  contain_enforcer.rs  critic_agent.rs  dashboard.rs  deception_runtime.rs  distributed_oracle.rs  dna_engine.rs  event_bus.rs  federation.rs  federation_auth.rs  federation_client.rs  fstec_bdu.rs  fusion_engine.rs  heal_queue.rs  healing_orchestrator.rs  honeypot_manager.rs  inquisitor_agent.rs  isolation.rs  key_provider.rs  knowledge.rs  knowledge_item.rs  learning_orchestrator.rs  llm_guard.rs  llm_status.rs  local_llm.rs  main.rs  mcts.rs  metrics.rs  moving_target.rs  mtls.rs  p2p_discovery.rs  patch_applier.rs  persistence.rs  (+15 more)
backend/src/agent/prompts/: ar.prompt  architect.prompt  coo.prompt  deceiver.prompt  inquisitor.prompt  qa.prompt  researcher_darknet.prompt   researcher_osint.prompt
backend/src/agent/scout_intel/: dedupe.rs  enrichment.rs  hub.rs  mitre.rs  mod.rs  structured.rs  types.rs  ux.rs
backend/src/agent/scout_intel/data/: mitre_map.json
backend/src/agent/scout_intel/sources/: abuse_ch.rs  blog_rss.rs  feed_parse.rs  fortiguard.rs  fstec.rs  http_util.rs  mod.rs  otx.rs  safe_surf.rs  talos.rs  virustotal.rs
backend/src/oracle/: main.rs  mock.rs
backend/src/sentinel/: main.rs
(+195 files in other folders)
